// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnscannedProjects component header matches the snapshot when the "helpPath" prop is empty 1`] = `
<header
  class="px-3 pt-3 mb-0"
>
  <h4
    class="my-0"
  >
    
      Project scanning
      
    <!---->
  </h4>
   
  <p
    class="text-secondary mb-0"
  >
    
      Default branch scanning by project
    
  </p>
</header>
`;

exports[`UnscannedProjects component header matches the snapshot when the "helpPath" prop is not empty 1`] = `
<header
  class="px-3 pt-3 mb-0"
>
  <h4
    class="my-0"
  >
    
      Project scanning
      
    <a
      class="gl-link"
      href="/foo/bar/help"
      rel="noopener"
      target="_blank"
      title="Project scanning help page"
    >
      <svg
        aria-hidden="true"
        class="align-top gl-icon s12"
        data-testid="question-icon"
        role="img"
      >
        <use
          href="#question"
        />
      </svg>
    </a>
  </h4>
   
  <p
    class="text-secondary mb-0"
  >
    
      Default branch scanning by project
    
  </p>
</header>
`;

exports[`UnscannedProjects component tab content shows a list of outdated projects 1`] = `
<div
  class="mx-3 my-2 overflow-auto"
  style="height: 15rem;"
>
  <div
    class="mb-3"
  >
    <h5
      class="m-0"
    >
      Outdated Projects Group 1
    </h5>
     
    <ul
      class="list-unstyled mb-0"
    >
      <li
        class="mt-1"
      >
        <a
          class="gl-link"
          href="/outdated-project-1/pipelines"
          rel="noopener"
          target="_blank"
        >
          Outdated Project One
        </a>
      </li>
    </ul>
  </div>
  <div
    class="mb-3"
  >
    <h5
      class="m-0"
    >
      Outdated Projects Group 2
    </h5>
     
    <ul
      class="list-unstyled mb-0"
    >
      <li
        class="mt-1"
      >
        <a
          class="gl-link"
          href="/outdated-project-2/pipelines"
          rel="noopener"
          target="_blank"
        >
          Outdated Project Two
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`UnscannedProjects component tab content shows a list of untested projects 1`] = `
<div
  class="mx-3 my-2 overflow-auto"
  style="height: 15rem;"
>
  <ul
    class="list-unstyled m-0"
  >
    <li
      class="mb-1"
    >
      <a
        class="gl-link"
        href="/untested-1/security/configuration"
        rel="noopener"
        target="_blank"
      >
        Untested Project One
      </a>
    </li>
    <li
      class="mb-1"
    >
      <a
        class="gl-link"
        href="/untested-2/security/configuration"
        rel="noopener"
        target="_blank"
      >
        Untested Project Two
      </a>
    </li>
  </ul>
</div>
`;
